--- a/STUDENT PERFORMANCE/analysis.ipynb
+++ b/STUDENT PERFORMANCE/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "[1000 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "(1000, 8)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,6 +485,429 @@
     "*Using the nunique() of Pandas, we have analysed number of unique values in each column*  \n",
     "*For ex: There are 2 uniques values in gender column , male and female*  \n",
     "*Similarily, there are 5 unique values in race/ethnicity column and so on..*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Check Statistics of Dataset**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Calculating Mean of reading , writing and math score*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.089\n",
+      "68.054\n",
+      "69.169\n"
+     ]
+    }
+   ],
+   "source": [
+    "math_mean_score=df['math score'].mean()\n",
+    "print(math_mean_score)\n",
+    "\n",
+    "writing_mean_score=df['writing score'].mean()\n",
+    "print(writing_mean_score)\n",
+    "\n",
+    "reading_mean_score=df['reading score'].mean()\n",
+    "print(reading_mean_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Calculating Median of reading, writing and math score*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.0\n",
+      "69.0\n",
+      "70.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "math_median=df['math score'].median()\n",
+    "print(math_median)\n",
+    "\n",
+    "writing_median=df['writing score'].median()\n",
+    "print(writing_median)\n",
+    "\n",
+    "reading_median=df['reading score'].median()\n",
+    "print(reading_median)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Calculating Mode of reading , writing and math score*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    65\n",
+      "Name: math score, dtype: int64\n",
+      "0    74\n",
+      "Name: writing score, dtype: int64\n",
+      "0    72\n",
+      "Name: reading score, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "math_mode=df['math score'].mode()\n",
+    "print(math_mode)\n",
+    "\n",
+    "writing_mode=df['writing score'].mode()\n",
+    "print(writing_mode)\n",
+    "\n",
+    "reading_mode=df['reading score'].mode()\n",
+    "print(reading_mode)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Calculating Range i.e. difference between max and min values of reading, writing and math score*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "83\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "m_max=df['math score'].max() # 100\n",
+    "m_min=df['math score'].min() # 0\n",
+    "\n",
+    "math_score_range=m_max-m_min\n",
+    "print(math_score_range)\n",
+    "\n",
+    "\n",
+    "r_max=df['reading score'].max() # 100\n",
+    "r_min=df['reading score'].min() # 17\n",
+    "\n",
+    "reading_score_range=r_max-r_min\n",
+    "print(reading_score_range)\n",
+    "\n",
+    "w_max=df['writing score'].max() # 100\n",
+    "w_min=df['writing score'].min() # 10\n",
+    "\n",
+    "writing_score_range=w_max-w_min\n",
+    "print(writing_score_range)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Using the describe() of Pandas, we have analysed various features like count,mean,std,min,etc...*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000.00000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>66.08900</td>\n",
+       "      <td>69.169000</td>\n",
+       "      <td>68.054000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>15.16308</td>\n",
+       "      <td>14.600192</td>\n",
+       "      <td>15.195657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>57.00000</td>\n",
+       "      <td>59.000000</td>\n",
+       "      <td>57.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>66.00000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>77.00000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>100.00000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       math score  reading score  writing score\n",
+       "count  1000.00000    1000.000000    1000.000000\n",
+       "mean     66.08900      69.169000      68.054000\n",
+       "std      15.16308      14.600192      15.195657\n",
+       "min       0.00000      17.000000      10.000000\n",
+       "25%      57.00000      59.000000      57.750000\n",
+       "50%      66.00000      70.000000      69.000000\n",
+       "75%      77.00000      79.000000      79.000000\n",
+       "max     100.00000     100.000000     100.000000"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['gender', 'race/ethnicity', 'parental level of education', 'lunch',\n",
+       "       'test preparation course', 'math score', 'reading score',\n",
+       "       'writing score'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.corr of      gender race/ethnicity parental level of education         lunch  \\\n",
+       "0    female        group B           bachelor's degree      standard   \n",
+       "1    female        group C                some college      standard   \n",
+       "2    female        group B             master's degree      standard   \n",
+       "3      male        group A          associate's degree  free/reduced   \n",
+       "4      male        group C                some college      standard   \n",
+       "..      ...            ...                         ...           ...   \n",
+       "995  female        group E             master's degree      standard   \n",
+       "996    male        group C                 high school  free/reduced   \n",
+       "997  female        group C                 high school  free/reduced   \n",
+       "998  female        group D                some college      standard   \n",
+       "999  female        group D                some college  free/reduced   \n",
+       "\n",
+       "    test preparation course  math score  reading score  writing score  \n",
+       "0                      none          72             72             74  \n",
+       "1                 completed          69             90             88  \n",
+       "2                      none          90             95             93  \n",
+       "3                      none          47             57             44  \n",
+       "4                      none          76             78             75  \n",
+       "..                      ...         ...            ...            ...  \n",
+       "995               completed          88             99             95  \n",
+       "996                    none          62             55             55  \n",
+       "997               completed          59             71             65  \n",
+       "998               completed          68             78             77  \n",
+       "999                    none          77             86             86  \n",
+       "\n",
+       "[1000 rows x 8 columns]>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Getting Numerical Features*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     math score  reading score  writing score\n",
+      "0            72             72             74\n",
+      "1            69             90             88\n",
+      "2            90             95             93\n",
+      "3            47             57             44\n",
+      "4            76             78             75\n",
+      "..          ...            ...            ...\n",
+      "995          88             99             95\n",
+      "996          62             55             55\n",
+      "997          59             71             65\n",
+      "998          68             78             77\n",
+      "999          77             86             86\n",
+      "\n",
+      "[1000 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeric_features=df.select_dtypes(include=['int','float'])\n",
+    "print(numeric_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Getting Categorical/Object Features*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     gender race/ethnicity parental level of education         lunch  \\\n",
+      "0    female        group B           bachelor's degree      standard   \n",
+      "1    female        group C                some college      standard   \n",
+      "2    female        group B             master's degree      standard   \n",
+      "3      male        group A          associate's degree  free/reduced   \n",
+      "4      male        group C                some college      standard   \n",
+      "..      ...            ...                         ...           ...   \n",
+      "995  female        group E             master's degree      standard   \n",
+      "996    male        group C                 high school  free/reduced   \n",
+      "997  female        group C                 high school  free/reduced   \n",
+      "998  female        group D                some college      standard   \n",
+      "999  female        group D                some college  free/reduced   \n",
+      "\n",
+      "    test preparation course  \n",
+      "0                      none  \n",
+      "1                 completed  \n",
+      "2                      none  \n",
+      "3                      none  \n",
+      "4                      none  \n",
+      "..                      ...  \n",
+      "995               completed  \n",
+      "996                    none  \n",
+      "997               completed  \n",
+      "998               completed  \n",
+      "999                    none  \n",
+      "\n",
+      "[1000 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "categorical_features=df.select_dtypes(include='object')\n",
+    "print(categorical_features)"
    ]
   },
   {
