--- a/STUDENT PERFORMANCE/analysis.ipynb
+++ b/STUDENT PERFORMANCE/analysis.ipynb
@@ -1475,6 +1475,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Analysis :**  \n",
+    "*Here, we have analysed that students who have completed their Test Preparation Course have scored better in every subjects as compared to students who haven't completed their Test Preparation Course*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Lunch vs Test Score Comparison**"
    ]
   },
@@ -1506,6 +1514,14 @@
     "sns.barplot(x=df['lunch'], y=df['total marks'])\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Analysis :**  \n",
+    "*Here we have analysed that students who received standard lunch performed better than students who received free/reduced lunch in all subjects*"
    ]
   },
   {
@@ -1556,6 +1572,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Analysis :**  \n",
+    "*Here, we have analysed that students whose parents have Master's or Bachelor's Degree have performed better than other students whose parents have got other formal education*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Gender vs Test Scores**"
    ]
   },
@@ -1587,6 +1611,14 @@
     "sns.barplot(x=df['gender'], y=df['total marks'])\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Analysis :**  \n",
+    "*Here, we have analysed that male have performed better than females in Math subject whereas females have performed better in Reading , writing and have better overvall marks than males*"
    ]
   },
   {
@@ -1634,11 +1666,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Analysis :**  \n",
+    "*Here, we have analysed that students who belong to Group E Race have performed better in all subjects than any other race students.*\n"
+   ]
   }
  ],
  "metadata": {
